--- a/src/System.Private.TypeLoader/src/System.Private.TypeLoader.csproj
+++ b/src/System.Private.TypeLoader/src/System.Private.TypeLoader.csproj
@@ -407,8 +407,7 @@
       <Link>Internal\TypeSystem\WellKnownType.cs</Link>
     </Compile>
     <Compile Include="Internal\Runtime\CompilerHelpers\LibraryInitializer.cs" />
-    <Compile Include="Internal\Runtime\DebuggerSupport\DebuggerContract.cs" />
-    <Compile Include="Internal\Runtime\DebuggerSupport\DebugFuncEval.cs" />
+    <Compile Include="Internal\Runtime\DebuggerSupport\DebuggerSupport.cs" />
     <Compile Include="Internal\Runtime\TypeLoader\CallConverterThunk.CallConversionInfo.cs" />
     <Compile Include="Internal\Runtime\TypeLoader\CallConverterThunk.CallConversionParameters.cs" />
     <Compile Include="Internal\Runtime\TypeLoader\CallConverterThunk.cs" />
