--- a/src/ILCompiler.Compiler/tests/ILCompiler.Compiler.Tests.csproj
+++ b/src/ILCompiler.Compiler/tests/ILCompiler.Compiler.Tests.csproj
@@ -30,6 +30,11 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <Targets>Build;DebugSymbolsProjectOutputGroup</Targets>
     </ProjectReference>
+
+    <PackageReference Include="Microsoft.DiaSymReader">
+      <Version>1.0.8</Version>
+    </PackageReference>
+    <SupplementalTestData Include="..\..\..\packages\microsoft.diasymreader\1.0.8\lib\netstandard1.1\Microsoft.DiaSymReader.dll" />
   </ItemGroup>
 
   <ItemGroup>
