Thread pool ETW Events (#3957)
* Added LogTransition

* Added ETW implementations for CLR Thread Pool

Move ClrThreadPoolEventSource into its own file

Localized enum values to ClrThreadPoolEventSource

* Added EventSourceAttribute to ClrThreadPoolEventSource.  Change event ids so as to not crash the program from an index out of bounds exception.

* Fix missing brace from rebase

* Make the event source class public so the reflection data is correctly generated.

* PR Feedback

* Refactor out waiting for a request so we can have ETW logging right next to the waiting

--- a/src/System.Private.CoreLib/src/System.Private.CoreLib.csproj
+++ b/src/System.Private.CoreLib/src/System.Private.CoreLib.csproj
@@ -640,6 +640,7 @@
     <Compile Include="System\Threading\ClrThreadPool.ThreadCounts.cs" />
     <Compile Include="System\Threading\ClrThreadPool.WaitThread.cs" />
     <Compile Include="System\Threading\ClrThreadPool.WorkerThread.cs" />
+    <Compile Include="System\Threading\ClrThreadPoolEventSource.cs" />
     <Compile Include="System\Threading\EventWaitHandle.Unix.cs" />
     <Compile Include="System\Threading\LowLevelLifoSemaphore.Unix.cs" />
     <Compile Include="System\Threading\LowLevelLock.Unix.cs" />
