Fix debugger stepping into Main method
This fixes a long standing pet peeve of mine: F11 into the
`__managed_Main` method doesn't work and steps over the method instead.
This adds infrastructure so that we can do `DebuggerGuidedStepThrough`
on generated methods.

A slight annoyance is that for UTC, the FEEFEE sequence point needs to
be on a NOP that precedes the call, and that scheme doesn't work for
RyuJIT. But UTC will need to fix that anyway because we won't be
rewriting IL for them in the future and no-NOP is how
DebuggerGuidedStepThrough methods are in C# when used from within the
BCL.

--- a/src/ILCompiler.TypeSystem/src/ILCompiler.TypeSystem.csproj
+++ b/src/ILCompiler.TypeSystem/src/ILCompiler.TypeSystem.csproj
@@ -421,6 +421,9 @@
     <Compile Include="..\..\Common\src\TypeSystem\IL\Stubs\ILEmitter.cs">
       <Link>IL\Stubs\ILEmitter.cs</Link>
     </Compile>
+    <Compile Include="..\..\Common\src\TypeSystem\IL\Stubs\DebuggerSteppingHelpers.cs">
+      <Link>IL\Stubs\DebuggerSteppingHelpers.cs</Link>
+    </Compile>
     <Compile Include="..\..\Common\src\TypeSystem\IL\Stubs\DelegateMarshallingMethodThunk.cs">
       <Link>IL\Stubs\DelegateMarshallingMethodThunk.cs</Link>
     </Compile>
