--- a/src/System.Private.CoreLib/src/System.Private.CoreLib.csproj
+++ b/src/System.Private.CoreLib/src/System.Private.CoreLib.csproj
@@ -753,8 +753,8 @@
     <Compile Include="..\..\Common\src\System\CommonRuntimeTypes.cs">
       <Link>System\CommonRuntimeTypes.cs</Link>
     </Compile>
-    <Compile Include="..\..\Common\src\System\__HResults.cs">
-      <Link>System\__HResults.cs</Link>
+    <Compile Include="..\..\Common\src\System\HResults.cs">
+      <Link>System\HResults.cs</Link>
     </Compile>
     <Compile Include="..\..\Common\src\Internal\NativeFormat\NativeFormatReader.Primitives.cs">
       <Link>Common\src\Internal\NativeFormat\NativeFormatReader.Primitives.cs</Link>
