Fix late bound invoke on string constructors added in NS2.0
Fixes https://devdiv.visualstudio.com/DevDiv/_workitems/edit/476529

This fix also consolidates four different MethodInvokers into
one general purpose one (CustomMethodInvoker.)

- IntPtr/UIntPtr invokers - vaporized. The intrinsics all have
  fallback bodies and late-bound invoke now works fine on them
  using the normal path.

- String/Nullable invokers - the normal path still doesn't
  work on them (no surprise since we never asked them to
  support this.) These have been replaced with CustomMethodInvoker
  and the NS2.0-added String constructors added.

- The array constructors and get/set methods. These used
  the Synthetic invoker - Synthetic invoker was cleaned up
  and rebranded as CustomMethodInvoker.

--- a/src/System.Private.Reflection.Core/src/System.Private.Reflection.Core.csproj
+++ b/src/System.Private.Reflection.Core/src/System.Private.Reflection.Core.csproj
@@ -127,6 +127,12 @@
     <Compile Include="System\Reflection\Runtime\General\QSignatureTypeHandle.cs" />
     <Compile Include="System\Reflection\Runtime\General\QSignatureTypeHandle.NativeFormat.cs" />
     <Compile Include="System\Reflection\Runtime\MethodInfos\NativeFormat\NativeFormatMethodCommon.cs" />
+    <Compile Include="System\Reflection\Runtime\MethodInfos\CustomMethodInvoker.cs" />
+    <Compile Include="System\Reflection\Runtime\MethodInfos\CustomMethodInvokerAction.cs" />
+    <Compile Include="System\Reflection\Runtime\MethodInfos\CustomMethodMapper.cs" />
+    <Compile Include="System\Reflection\Runtime\MethodInfos\CustomMethodMapper.Nullable.cs" />
+    <Compile Include="System\Reflection\Runtime\MethodInfos\CustomMethodMapper.String.cs" />
+    <Compile Include="System\Reflection\Runtime\MethodInfos\InvokerOptions.cs" />
     <Compile Include="System\Reflection\Runtime\MethodInfos\OpenMethodInvoker.cs" />
     <Compile Include="System\Reflection\Runtime\MethodInfos\RuntimeClsIdNullaryConstructorInfo.cs" />
     <Compile Include="System\Reflection\Runtime\MethodInfos\RuntimeConstructedGenericMethodInfo.cs" />
@@ -195,7 +201,6 @@
     <Compile Include="Internal\Reflection\Core\Execution\FieldAccessor.cs" />
     <Compile Include="Internal\Reflection\Core\Execution\MethodInvoker.cs" />
     <Compile Include="Internal\Reflection\Core\Execution\ReflectionCoreExecution.cs" />
-    <Compile Include="Internal\Reflection\Core\Execution\InvokerOptions.cs" />
   </ItemGroup>
   <ItemGroup Condition="'$(IsProjectNLibrary)' == 'true'">
     <Compile Include="Internal\Reflection\Tracing\ReflectionTrace.Public.cs" />
