Fix LLVM NuGet binary placement and clean up changes

--- a/src/ILCompiler/desktop/desktop.csproj
+++ b/src/ILCompiler/desktop/desktop.csproj
@@ -92,6 +92,10 @@
       <Project>{1a9df196-43a9-44bb-b2c6-d62aa56b0e49}</Project>
       <Name>ILCompiler.TypeSystem</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\ILCompiler.WebAssembly\src\ILCompiler.WebAssembly.csproj">
+      <Project>{5d796936-ccc1-4e9d-b1a9-36a5aba9b499}</Project>
+      <Name>ILCompiler.WebAssembly</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="..\..\..\bin\Windows_NT.$(Platform).$(Configuration)\tools\jitinterface.dll">
