--- a/src/ILCompiler.WebAssembly/src/ILCompiler.WebAssembly.csproj
+++ b/src/ILCompiler.WebAssembly/src/ILCompiler.WebAssembly.csproj
@@ -13,6 +13,7 @@
     </UpgradeBackupLocation>
     <OldToolsVersion>2.0</OldToolsVersion>
     <NoWarn>8002</NoWarn>
+    <OutputPath>$(BaseOutputPath)$(OSPlatformConfig)/tools</OutputPath>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="LLVMSharp">
@@ -45,15 +46,23 @@
     <Compile Include="CodeGen\ILToWebAssemblyImporter_Statics.cs" />
     <Compile Include="CodeGen\LLVMMisc.cs" />
     <Compile Include="CodeGen\WebAssemblyObjectWriter.cs" />
+    <Compile Include="Compiler\DependencyAnalysis\RawMainMethodRootProvider.cs" />
     <Compile Include="Compiler\DependencyAnalysis\WebAssemblyCodegenNodeFactory.cs" />
     <Compile Include="Compiler\DependencyAnalysis\WebAssemblyMethodCodeNode.cs" />
     <Compile Include="Compiler\WebAssemblyNodeMangler.cs" />
     <Compile Include="Compiler\WebAssemblyCodegenCompilation.cs" />
     <Compile Include="Compiler\WebAssemblyCodegenCompilationBuilder.cs" />
-    <Compile Include="CodeGen\DependencyNodeIterator.cs" />
     <Compile Include="CodeGen\EvaluationStack.cs" />
     <Compile Include="CodeGen\NodeDataSection.cs" />
     <Compile Include="CodeGen\ILToWebAssemblyImporter.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="..\..\..\packages\llvmsharp\3.9.1-rc3\lib\netstandard1.1\LLVMSharp.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\..\..\packages\libllvm\3.9.1\content\libLLVM-x64.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory), dir.targets))\dir.targets" Condition="'$(IsProjectNLibrary)' != 'true'" />
 </Project>
