Implemented basic ldftn functionality and constraint checks. Moved type conversions to helper class.

--- a/src/ILVerify/src/ILVerify.csproj
+++ b/src/ILVerify/src/ILVerify.csproj
@@ -16,6 +16,7 @@
     <Compile Include="SimpleArrayOfTRuntimeInterfacesAlgorithm.cs" />
     <Compile Include="SimpleTypeSystemContext.cs" />
     <Compile Include="VerifierError.cs" />
+    <Compile Include ="TypeSystemHelpers.cs" />
   </ItemGroup>
 
   <ItemGroup>
